--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,35 +1,19 @@
 {
   "compilerOptions": {
-    "target": "ES2016",
-    "moduleResolution": "node",
-    "module": "commonjs",
-    "declaration": false,
-    "noLib": false,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "sourceMap": true,
-    "pretty": true,
-    "allowUnreachableCode": true,
-    "allowUnusedLabels": true,
-    "noImplicitAny": false,
-    "noImplicitReturns": false,
-    "noImplicitUseStrict": false,
-    "noFallthroughCasesInSwitch": false,
-    "noEmitOnError": false,
-    "allowSyntheticDefaultImports": true,
-    "suppressExcessPropertyErrors": true,
-    "suppressImplicitAnyIndexErrors": true,
-    "outDir": "./dist",
-    // "rootDir": "./src",
-    "rootDirs": ["./src"],
-    "listFiles": false,
-    "noEmitHelpers": true
-  },
-  "include": [
-    "src/**/*"
-, "app.ts"  ],
-  "exclude": [
-    "node_modules"
-  ],
-  "compileOnSave": false
+    "target": "ES2016",                                
+    "module": "commonjs",    
+    "noImplicitAny": true,                  
+    "outDir": "./dist",   
+    "alwaysStrict": true,     
+    "strict": true,  
+    "strictNullChecks": true,                              
+    "strictPropertyInitialization": false,        
+    "rootDirs": ["./src"],                
+    "esModuleInterop": true,                        
+    "experimentalDecorators": true,              
+    "emitDecoratorMetadata": true,              
+    "skipLibCheck": true,                           
+    "forceConsistentCasingInFileNames": true ,
+    "sourceMap": true
+  }
 }
