--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
+    "nanoid": "^3.2.0",
     "nodemon": "^2.0.15",
     "pg": "^8.7.1",
     "routing-controllers": "^0.9.0",
