--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "class-validator": "^0.12.2",
     "config": "^3.3.7",
     "cors": "^2.8.5",
+    "date-fns": "^2.28.0",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
+    "ms": "^2.1.3",
     "nanoid": "^3.2.0",
     "nodemon": "^2.0.15",
     "pg": "^8.7.1",
@@ -46,6 +48,7 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/lodash": "^4.14.178",
     "@types/morgan": "^1.9.3",
+    "@types/ms": "^0.7.31",
     "@types/node": "^17.0.10",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
