--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "date-fns": "^2.28.0",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
+    "express-useragent": "^1.0.15",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
@@ -45,6 +46,7 @@
     "@types/config": "^0.0.41",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/express-useragent": "^1.0.2",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/lodash": "^4.14.178",
     "@types/morgan": "^1.9.3",
