--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "argon2": "^0.28.3",
     "body-parser": "^1.19.1",
+    "bull": "^4.5.0",
     "class-validator": "^0.12.2",
     "config": "^3.3.7",
     "cors": "^2.8.5",
@@ -34,6 +35,7 @@
     "morgan": "^1.10.0",
     "ms": "^2.1.3",
     "nanoid": "^3.2.0",
+    "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
     "pg": "^8.7.1",
     "routing-controllers": "^0.9.0",
@@ -43,6 +45,7 @@
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
+    "@types/bull": "^3.15.7",
     "@types/config": "^0.0.41",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
@@ -52,6 +55,7 @@
     "@types/morgan": "^1.9.3",
     "@types/ms": "^0.7.31",
     "@types/node": "^17.0.10",
+    "@types/nodemailer": "^6.4.4",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "eslint": "^8.7.0",
