--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
     "express-useragent": "^1.0.15",
+    "googleapis": "^94.0.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
