--- a/config/.env.dev
+++ b/config/.env.dev
@@ -1,4 +1,12 @@
 NODE_ENV='development'
+
+# DB
+DB_USERNAME='postgres'
+DB_HOST='localhost'
+DB_PASSWORD='I love God.'
+DB_SYNCHRONIZE=true
+
+#TOKENS
 ACCESS_TOKEN_SECRET='4252fd6c-6471-496f-b2c9-0bb163615a91'
 REFRESH_TOKEN_SECRET='332eeb7c-c3f5-4658-99e1-de2ab8e57206'
 ACCESS_TOKEN_EXPIRATION='50m'
@@ -9,17 +17,13 @@ REFRESH_TOKEN_EXPIRATION='7d'
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
 QUEUE_PREFIX='bull'
-# REDIS_PASSWORD='I love God.'
-REDIS_TIME=3600
+
+# COOKIES
+HTTPONLY=true
+SECURE=false
 
 # EMAIL SERVICE
-MAIL_DRIVER=smtp
-MAIL_HOST=
-MAIL_PORT=465
 MAIL_USERNAME='studaidorganization@gmail.com'
-MAIL_PASSWORD='studaid@Billions'
-MAIL_ENCRYPTION=ssl
-
 
 # OAUTH
 OAUTH_CLIENTID='1018824091914-o6jtska13r9d3v18lrd2vbpl7oait1kr.apps.googleusercontent.com'
