--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "main.js",
   "scripts": {
     "build": "rimraf ./dist && tsc",
-    "start:dev": "nodemon",
-    "start:prod": "npm run build && node ./dist/main.js",
+    "start:dev": "cross-env ENV_FILE=./config/.env.dev nodemon",
+    "start:prod": "cross-env ENV_FILE=./config/.env.prod npm run build && node ./dist/main.js",
     "lint": "eslint \"src/**/*.ts\" --fix"
   },
   "repository": {
@@ -28,9 +28,12 @@
     "cors": "^2.8.5",
     "date-fns": "^2.28.0",
     "dotenv": "^14.2.0",
+    "dotenv-extended": "^2.9.0",
+    "dotenv-parse-variables": "^2.0.0",
     "express": "^4.17.2",
     "express-useragent": "^1.0.15",
     "googleapis": "^94.0.0",
+    "ioredis": "^4.28.4",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
@@ -49,6 +52,7 @@
     "@types/bull": "^3.15.7",
     "@types/config": "^0.0.41",
     "@types/cors": "^2.8.12",
+    "@types/dotenv-parse-variables": "^2.0.1",
     "@types/express": "^4.17.13",
     "@types/express-useragent": "^1.0.2",
     "@types/jsonwebtoken": "^8.5.8",
@@ -59,6 +63,7 @@
     "@types/nodemailer": "^6.4.4",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.7.0",
     "rimraf": "^3.0.2",
     "ts-helpers": "^1.1.2",
