--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "build": "rimraf ./dist && tsc",
     "start:dev": "cross-env ENV_FILE=./config/.env.dev nodemon",
-    "start:prod": "cross-env ENV_FILE=./config/.env.prod npm run build && node ./dist/main.js",
-    "lint": "eslint \"src/**/*.ts\" --fix"
+    "start:prod": "cross-env ENV_FILE=./config/.env.prod build && node -r tsconfig-paths/register ./dist/main.js",
+    "lint": "eslint \"src/**/*.ts\" --fix",
+    "test:unit": "cross-env ENV_FILE=./config/.env.test jest"
   },
   "repository": {
     "type": "git",
@@ -55,6 +56,7 @@
     "@types/dotenv-parse-variables": "^2.0.1",
     "@types/express": "^4.17.13",
     "@types/express-useragent": "^1.0.2",
+    "@types/jest": "^27.4.0",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/lodash": "^4.14.178",
     "@types/morgan": "^1.9.3",
@@ -65,9 +67,12 @@
     "@typescript-eslint/parser": "^5.10.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.7.0",
+    "jest": "^27.4.7",
     "rimraf": "^3.0.2",
     "ts-helpers": "^1.1.2",
+    "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
+    "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.5"
   }
 }
