--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "strict": true,  
     "strictNullChecks": true,                              
     "strictPropertyInitialization": false,        
-    "rootDirs": ["./src"],                
+    "rootDir": "src",                
     "esModuleInterop": true,                        
     "experimentalDecorators": true,              
     "emitDecoratorMetadata": true,              
@@ -16,14 +16,16 @@
     "forceConsistentCasingInFileNames": true ,
     "sourceMap": true,
     "typeRoots": ["./@types", "./node_modules/@types"],
+    "baseUrl": "./",
     "paths": {
-      "@config/*": ["./src/config/*"],
-      "@core/*": ["./src/core/*"],
-      "@middlewares/*": ["./src/middlewares/*"],
-      "@modules/*": ["./src/modules/*"],
-      "@utils/*": ["./src/utils/*"],
-      "@providers/*": ["./src/providers/*"],
-      "@helpers/*": ["./src/helpers/*"]
+      "@config/*": ["src/config/*"],
+      "@core/*": ["src/core/*"],
+      "@middlewares/*": ["src/middlewares/*"],
+      "@modules/*": ["src/modules/*"],
+      "@utils/*": ["src/utils/*"],
+      "@providers/*": ["src/providers/*"],
+      "@helpers/*": ["src/helpers/*"],
+      "@db/*": ["src/db/*"]
     },
   }
 }
