--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,4 @@
-{
-  "compilerOptions": {
+{"compilerOptions": {
     "target": "ES2016",                                
     "module": "commonjs",    
     "noImplicitAny": true,                  
@@ -26,9 +25,7 @@
       "@utils/*": ["src/utils/*"],
       "@providers/*": ["src/providers/*"],
       "@helpers/*": ["src/helpers/*"],
-      "@db/*": ["src/db/*"]
-    },
+      "@db/*": ["src/db/*"]}
   },
   "include": ["./src", "./tests"],
-  "exclude": ["node_modules", "dist"],
-}
+  "exclude": ["node_modules", "dist"]}
