update: Using OpenSSL for public and private keys for accessTokens

--- a/config/.env.defaults
+++ b/config/.env.defaults
@@ -1,8 +1,13 @@
-# SERVER
+// SERVER
 PORT=4000
 DEBUG=5858
 
-# DB
+// DB
 DB_TYPE='postgres'
 DB_PORT=5432
 DB_DATABASE='authentication'
+
+// OPENSSL
+PRIVATE_KEY_FILE='./config/jwt/private.pem'
+PRIVATE_KEY_PASSPHRASE='PEMPassPhrase'
+PUBLIC_KEY_FILE='./config/jwt/public.pem'
