--- a/config/.env.schema
+++ b/config/.env.schema
@@ -12,6 +12,11 @@ DB_HOST=
 DB_PASSWORD=
 DB_SYNCHRONIZE=
 
+#OPENSSL
+PRIVATE_KEY_FILE=
+PRIVATE_KEY_PASSPHRASE=
+PUBLIC_KEY_FILE=
+
 # TOKENS
 ACCESS_TOKEN_SECRET=
 REFRESH_TOKEN_SECRET=
