feat: redis caching setup

--- a/config/.env.dev
+++ b/config/.env.dev
@@ -17,6 +17,7 @@ REFRESH_TOKEN_EXPIRATION='7d'
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
 QUEUE_PREFIX='bull'
+REDIS_URL=//localhost:6379
 
 # COOKIES
 HTTPONLY=true
