--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
     "pg": "^8.7.1",
+    "redis": "^4.0.3",
     "routing-controllers": "^0.9.0",
     "supertest": "^6.2.2",
     "swagger-ui-express": "^4.3.0",
@@ -64,12 +65,15 @@
     "@types/ms": "^0.7.31",
     "@types/node": "^17.0.10",
     "@types/nodemailer": "^6.4.4",
+    "@types/redis": "^4.0.11",
+    "@types/redis-mock": "^0.17.1",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.7.0",
     "jest": "^27.4.7",
+    "redis-mock": "^0.56.3",
     "rimraf": "^3.0.2",
     "ts-helpers": "^1.1.2",
     "ts-jest": "^27.1.3",
