--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express-useragent": "^1.0.15",
     "googleapis": "^94.0.0",
     "ioredis": "^4.28.4",
+    "ioredis-mock": "^7.0.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
@@ -43,7 +44,6 @@
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
     "pg": "^8.7.1",
-    "redis": "^4.0.3",
     "routing-controllers": "^0.9.0",
     "supertest": "^6.2.2",
     "swagger-ui-express": "^4.3.0",
@@ -58,6 +58,8 @@
     "@types/dotenv-parse-variables": "^2.0.1",
     "@types/express": "^4.17.13",
     "@types/express-useragent": "^1.0.2",
+    "@types/ioredis": "^4.28.8",
+    "@types/ioredis-mock": "^5.6.0",
     "@types/jest": "^27.4.0",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/lodash": "^4.14.178",
@@ -65,15 +67,12 @@
     "@types/ms": "^0.7.31",
     "@types/node": "^17.0.10",
     "@types/nodemailer": "^6.4.4",
-    "@types/redis": "^4.0.11",
-    "@types/redis-mock": "^0.17.1",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.7.0",
     "jest": "^27.4.7",
-    "redis-mock": "^0.56.3",
     "rimraf": "^3.0.2",
     "ts-helpers": "^1.1.2",
     "ts-jest": "^27.1.3",
