--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start:dev": "cross-env ENV_FILE=./config/.env.dev nodemon",
     "start:prod": "cross-env ENV_FILE=./config/.env.prod build && node -r tsconfig-paths/register ./dist/main.js",
     "lint": "eslint \"src/**/*.ts\" --fix",
-    "test:unit": "cross-env ENV_FILE=./config/.env.test jest --detectOpenHandles"
+    "test:unit": "cross-env ENV_FILE=./config/.env.test jest --detectOpenHandles --coverage"
   },
   "repository": {
     "type": "git",
@@ -58,6 +58,7 @@
     "@types/dotenv-parse-variables": "^2.0.1",
     "@types/express": "^4.17.13",
     "@types/express-useragent": "^1.0.2",
+    "@types/faker": "^5.5.3",
     "@types/ioredis": "^4.28.8",
     "@types/ioredis-mock": "^5.6.0",
     "@types/jest": "^27.4.0",
@@ -68,10 +69,12 @@
     "@types/node": "^17.0.10",
     "@types/nodemailer": "^6.4.4",
     "@types/supertest": "^2.0.11",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.7.0",
+    "faker": "^5.5.3",
     "jest": "^27.4.7",
     "rimraf": "^3.0.2",
     "ts-helpers": "^1.1.2",
