--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,31 +1,38 @@
-{"compilerOptions": {
-    "target": "ES2016",                                
-    "module": "commonjs",    
-    "noImplicitAny": true,                  
-    "outDir": "./dist",   
-    "alwaysStrict": true,     
-    "strict": true,  
-    "strictNullChecks": true,                              
-    "strictPropertyInitialization": false,        
-    "rootDir": "src",                
-    "esModuleInterop": true,                        
-    "experimentalDecorators": true,              
-    "emitDecoratorMetadata": true,              
-    "skipLibCheck": true,                           
-    "forceConsistentCasingInFileNames": true ,
-    "sourceMap": true,
-    "baseUrl": "./",
-    "typeRoots": ["src/@types", "node_modules/@types"],
-    "paths": {
-      "@auth-service/*": ["src/"],
-      "@config/*": ["src/config/*"],
-      "@core/*": ["src/core/*"],
-      "@middlewares/*": ["src/middlewares/*"],
-      "@modules/*": ["src/modules/*"],
-      "@utils/*": ["src/utils/*"],
-      "@providers/*": ["src/providers/*"],
-      "@helpers/*": ["src/helpers/*"],
-      "@db/*": ["src/db/*"]}
+{
+  "compilerOptions": {
+      "target": "ES2016",                                
+      "module": "commonjs",    
+      "noImplicitAny": true,                  
+      "outDir": "./dist",   
+      "alwaysStrict": true,     
+      "strict": true,  
+      "strictNullChecks": true,                              
+      "strictPropertyInitialization": false,        
+      "rootDir": "src",                
+      "esModuleInterop": true,                        
+      "experimentalDecorators": true,              
+      "emitDecoratorMetadata": true,              
+      "skipLibCheck": true,                           
+      "forceConsistentCasingInFileNames": true ,
+      "sourceMap": true,
+      "baseUrl": "./",
+      "typeRoots": ["src/@types", "node_modules/@types"],
+      "paths": {
+          "@auth-service/*": ["src/"],
+          "@config/*": ["src/config/*"],
+          "@core/*": ["src/core/*"],
+          "@middlewares/*": ["src/middlewares/*"],
+          "@modules/*": ["src/modules/*"],
+          "@utils/*": ["src/utils/*"],
+          "@providers/*": ["src/providers/*"],
+          "@helpers/*": ["src/helpers/*"],
+          "@db/*": ["src/db/*"]
+      }
   },
   "include": ["./src", "./tests"],
-  "exclude": ["node_modules", "dist"]}
+  "exclude": ["node_modules", "dist"],
+  "ts-node": {
+      "files": true,
+      "require": ["tsconfig-paths/register"]
+  }
+}
