--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "argon2": "^0.28.3",
     "body-parser": "^1.19.1",
     "bull": "^4.5.0",
-    "class-validator": "^0.12.2",
+    "class-validator": "^0.13.2",
     "config": "^3.3.7",
     "cors": "^2.8.5",
     "date-fns": "^2.28.0",
@@ -47,7 +47,9 @@
     "routing-controllers": "^0.9.0",
     "supertest": "^6.2.2",
     "swagger-ui-express": "^4.3.0",
+    "typedi": "^0.10.0",
     "typeorm": "^0.2.41",
+    "typeorm-typedi-extensions": "^0.4.1",
     "winston": "^3.4.0"
   },
   "devDependencies": {
