--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
     "pg": "^8.7.1",
+    "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.9.0",
     "supertest": "^6.2.2",
     "swagger-ui-express": "^4.3.0",
