--- a/config/.env.schema
+++ b/config/.env.schema
@@ -37,6 +37,13 @@ REDIS_URL=
 MAIL_USERNAME=
 
 # OAUTH
-OAUTH_CLIENTID=
-OAUTH_CLIENT_SECRET=
-OAUTH_REFRESH_TOKEN=
+GOOGLE_OAUTH_CLIENTID=
+GOOGLE_OAUTH_CLIENT_SECRET=
+GOOGLE_OAUTH_REFRESH_TOKEN=
+GOOGLE_OAUTH_REDIRECT_URL=
+
+FACEBOOK_OAUTH_CLIENTID=
+FACEBOOK_OAUTH_CLIENT_SECRET=
+FACEBOOK_OAUTH_REDIRECT_URL=
+
+
