--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "nanoid": "^3.2.0",
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
+    "passport": "^0.5.2",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth": "^2.0.0",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.9.0",
@@ -71,6 +74,9 @@
     "@types/ms": "^0.7.31",
     "@types/node": "^17.0.10",
     "@types/nodemailer": "^6.4.4",
+    "@types/passport": "^1.0.7",
+    "@types/passport-facebook": "^2.1.11",
+    "@types/passport-google-oauth": "^1.0.42",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
