--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
           "@modules/*": ["src/modules/*"],
           "@user/*": ["src/modules/user/*"],
           "@auth/*": ["src/modules/auth/*"],
+          "@platform/*": ["src/modules/platform/*"],
           "@utils/*": ["src/utils/*"],
           "@providers/*": ["src/providers/*"],
           "@helpers/*": ["src/helpers/*"],
