--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
           "@auth-service/*": ["src/"],
           "@config/*": ["src/config/*"],
           "@core/*": ["src/core/*"],
+          "@exceptions/*": ["src/exceptions/*"],
           "@middlewares/*": ["src/middlewares/*"],
           "@modules/*": ["src/modules/*"],
           "@user/*": ["src/modules/user/*"],
