--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "ioredis-mock": "^7.0.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "microframework-w3tec": "^0.6.3",
     "morgan": "^1.10.0",
     "ms": "^2.1.3",
     "nanoid": "^3.2.0",
