--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,9 +28,10 @@
           "@auth/*": ["src/modules/auth/*"],
           "@platform/*": ["src/modules/platform/*"],
           "@utils/*": ["src/utils/*"],
+          "@lib/*": ["src/lib/*"],
           "@providers/*": ["src/providers/*"],
           "@helpers/*": ["src/helpers/*"],
-          "@db/*": ["src/db/*"]
+          "@database/*": ["src/database/*"]
       }
   },
   "include": ["./src", "./tests"],
