chore: adding swagger for documentation

--- a/config/.env.schema
+++ b/config/.env.schema
@@ -1,7 +1,10 @@
-# SERVER
+# APP
 NODE_ENV=
-PORT=
-DEBUG=
+APP_NAME=express-typescript-boilerplate
+APP_SCHEMA=http
+APP_HOST=localhost
+APP_PORT=3000
+APP_ROUTE_PREFIX=/api
 
 # DB
 DB_PORT= 
@@ -49,4 +52,10 @@ FACEBOOK_OAUTH_REDIRECT_URL=
 
 TYPEORM_SEEDING_FACTORIES=
 TYPEORM_SEEDING_SEEDS=
+
+# SWAGGER
+SWAGGER_ENABLED=
+SWAGGER_ROUTE=
+SWAGGER_USERNAME=
+SWAGGER_PASSWORD=
 
