--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "body-parser": "^1.19.1",
     "bull": "^4.5.0",
     "class-validator": "^0.13.2",
+    "class-validator-jsonschema": "^3.1.0",
     "config": "^3.3.7",
     "cors": "^2.8.5",
     "date-fns": "^2.28.0",
@@ -43,8 +44,10 @@
     "dotenv-extended": "^2.9.0",
     "dotenv-parse-variables": "^2.0.0",
     "express": "^4.17.2",
+    "express-basic-auth": "^1.2.1",
     "express-useragent": "^1.0.15",
     "googleapis": "^94.0.0",
+    "helmet": "^5.1.0",
     "ioredis": "^4.28.4",
     "ioredis-mock": "^7.0.0",
     "jsonwebtoken": "^8.5.1",
@@ -60,7 +63,8 @@
     "passport-google-oauth": "^2.0.0",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
-    "routing-controllers": "^0.9.0",
+    "routing-controllers": "^0.8.1",
+    "routing-controllers-openapi": "^2.2.0",
     "supertest": "^6.2.3",
     "swagger-ui-express": "^4.3.0",
     "typedi": "^0.10.0",
@@ -91,6 +95,7 @@
     "@types/passport-facebook": "^2.1.11",
     "@types/passport-google-oauth": "^1.0.42",
     "@types/supertest": "^2.0.11",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
