--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,13 +7,13 @@
       "alwaysStrict": true,     
       "strict": true,  
       "strictNullChecks": true,                              
-      "strictPropertyInitialization": false,        
-      "rootDir": "src",                
+      "strictPropertyInitialization": false,                       
       "esModuleInterop": true,                        
       "experimentalDecorators": true,              
       "emitDecoratorMetadata": true,              
       "skipLibCheck": true,                           
       "forceConsistentCasingInFileNames": true ,
+      "resolveJsonModule": true,
       "sourceMap": true,
       "baseUrl": "./",
       "typeRoots": ["src/@types", "node_modules/@types"],
