feat: testing setup

--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "eslint": "^8.7.0",
     "faker": "^5.5.3",
     "jest": "^28.1.0",
+    "nock": "^13.2.6",
     "rimraf": "^3.0.2",
     "ts-helpers": "^1.1.2",
     "ts-jest": "^28.0.3",
