--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "class-validator": "^0.13.2",
     "class-validator-jsonschema": "^3.1.0",
     "config": "^3.3.7",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "date-fns": "^2.28.0",
     "dotenv": "^14.2.0",
@@ -77,6 +78,7 @@
     "@types/body-parser": "^1.19.2",
     "@types/bull": "^3.15.7",
     "@types/config": "^0.0.41",
+    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
     "@types/dotenv-parse-variables": "^2.0.1",
     "@types/express": "^4.17.13",
