refactor: logging system

--- a/config/.env.schema
+++ b/config/.env.schema
@@ -1,10 +1,11 @@
 # APP
 NODE_ENV=
-APP_NAME=express-typescript-boilerplate
-APP_SCHEMA=http
-APP_HOST=localhost
-APP_PORT=3000
-APP_ROUTE_PREFIX=/api
+APP_NAME=
+APP_SCHEMA=
+APP_HOST=
+APP_PORT=
+APP_ROUTE_PREFIX=
+APP_BANNER=
 
 # DB
 DB_PORT= 
