--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,7 @@
           "@utils/*": ["src/api/utils/*"],
           "@config/*": ["src/config/*"],
           "@database/*": ["src/database/*"],
+          "@decorators/*": ["src/decorators/*"],
           "@lib/*": ["src/lib/*"],
           "@loaders/*": ["src/loaders/*"],
           "@providers/*": ["src/providers/*"]         
