--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,24 +18,24 @@
       "baseUrl": "./",
       "typeRoots": ["src/@types", "node_modules/@types"],
       "paths": {
-          "@auth-service*": ["src/"],
-          "@api*": ["src/api"],
-          "@auth*": ["src/api/auth/*"],
+          "@auth-service/*": ["src/"],
+          "@api/*": ["src/api"],
+          "@auth/*": ["src/api/auth/*"],
           "@core*": ["src/api/core/*"],
           "@exceptions*": ["src/api/exceptions/*"],
           "@helpers*": ["src/api/helpers/*"],
-          "@middlewares*": ["src/api/middlewares/*"],
-          "@modules*": ["src/api/modules/*"],
-          "@user-module*": ["src/api/modules/user/*"],
-          "@auth-module*": ["src/api/modules/auth/*"],
-          "@platform-module*": ["src/api/modules/platform/*"],
-          "@utils*": ["src/api/utils/*"],
+          "@middlewares/*": ["src/api/middlewares/*"],
+          "@modules/*": ["src/api/modules/*"],
+          "@user-module/*": ["src/api/modules/user/*"],
+          "@auth-module/*": ["src/api/modules/auth/*"],
+          "@platform-module/*": ["src/api/modules/platform/*"],
+          "@utils/*": ["src/api/utils/*"],
           "@config*": ["src/config/*"],
-          "@database*": ["src/database/*"],
-          "@decorators*": ["src/decorators/*"],
-          "@lib*": ["src/lib/*"],
-          "@loaders*": ["src/loaders/*"],
-          "@providers*": ["src/providers/*"]         
+          "@database/*": ["src/database/*"],
+          "@decorators/*": ["src/decorators/*"],
+          "@lib/*": ["src/lib/*"],
+          "@loaders/*": ["src/loaders/*"],
+          "@providers/*": ["src/providers/*"]         
       }
   },
   "include": ["./src", "./test"],
