--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "argon2": "^0.28.3",
     "body-parser": "^1.19.1",
     "bull": "^4.5.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "class-validator-jsonschema": "^3.1.0",
     "config": "^3.3.7",
