--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     env_file:
       - ./config/.env.dev
     environment:
-      POSTGRES_PASSWORD: "I love God."
+      POSTGRES_PASSWORD: "postgres"
       POSTGRES_USER: postgres
       POSTGRES_DB: authentication
   web:
